###### TWE 5.1-1 RELEASED ######
2014-06-27 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to position artifact/gateway/start/end labels to the top/bottom/left/right location. Information stored in XPDL.

2014-06-23 Sasa Bojanic <sasaboy@together.at>
   # Fix: transition condition label was not always fully shown 
   # Fix: scrollbars were missing when Zoom In action was performed and then activity was moved
   # Fix: rendering of (otherwise) transitions going from/to and/or split/join node
   
2014-06-20 Sasa Bojanic <sasaboy@together.at>
   # "CTRL +", "CTRL -" and "CTRL 1" key combination now can be used to "Zoom In", "Zoom Out" and "Make actual size" in the graph.
   # Added possibility to position transition labels. Information stored in XPDL.
   
2014-06-19 Sasa Bojanic <sasaboy@together.at>
   # Improved Open (new XPDL file) action to work in a standard way
   # Fix: Now properly rendering transition's diamond on the tail (it was not properly rendered when transition expression was set and then removed)
   # Fix: Now properly rendering empty choice in combo box (e.g. for the type of transition condition)
   
2014-06-18 Sasa Bojanic <sasaboy@together.at>
   # Improved GUI

2014-06-10 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to edit expressions in external editor application (new documentation section "Property file appsforextensions.properties" describes this feature)
   # Now XPDL is not marked as "Not saved" in the case opened XPDL has different value for JaWE_CONFIGURATION extended attribute of package
   
2014-06-02 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to set the working directory with system parameter JaWE_WORKING_DIR (the place where TWE will search for XPDL files when using Open dialog).
   # New configuration parameter to specify if XPDL should be saved when Apply button is pressed in property panel. 