@@ -19,12 +19,17 @@
 package org.enhydra.jawe.components.graph;
 
 import java.awt.Dimension;
+import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.enhydra.jxpdl.XPDLConstants;
+import org.enhydra.jxpdl.elements.Activity;
 import org.jgraph.graph.AttributeMap;
+import org.jgraph.graph.CellView;
 import org.jgraph.graph.CellViewRenderer;
+import org.jgraph.graph.EdgeView;
 import org.jgraph.graph.GraphConstants;
 
 /**
@@ -46,7 +51,6 @@ public class DefaultGraphPortView extends GraphPortViewInterface {
       super(cell);
       AttributeMap map = new AttributeMap();
       GraphConstants.setSize(map, new Dimension(30, 30));
-      allowPortMagic = false;
       super.setAttributes(map);
    }
 
@@ -93,9 +97,70 @@ public class DefaultGraphPortView extends GraphPortViewInterface {
     * @return Renderer for this port.
     */
    protected GraphPortRendererInterface createRenderer(String type) {
-      return GraphUtilities.getGraphController()
-         .getGraphObjectRendererFactory()
-         .createPortRenderer(type);
+      return GraphUtilities.getGraphController().getGraphObjectRendererFactory().createPortRenderer(type);
+   }
+
+   public Point2D getLocation(EdgeView edge, Point2D nearest) {
+      Point2D pos = super.getLocation(edge, nearest);
+      CellView vertex = getParentView();
+      if (vertex != null) {
+         Point2D offset = GraphConstants.getOffset(allAttributes);
+         if (offset == null && edge != null && nearest != null) {
+            Rectangle2D r = vertex.getBounds();
+            if (vertex.getCell() instanceof DefaultGraphActivity && super.shouldInvokePortMagic(edge) != shouldInvokePortMagic(edge)) {
+               Activity act = ((Activity) ((DefaultGraphActivity) vertex.getCell()).getUserObject());
+               if (act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_ROUTE) {
+                  boolean calcx = nearest.getX() >= r.getX() && nearest.getX() <= r.getX() + r.getWidth();
+                  boolean calcy = nearest.getY() >= r.getY() && nearest.getY() <= r.getY() + r.getHeight();
+                  if (!(calcx && calcy)) {
+                     if (calcx) {
+                        double yc = r.getY() + r.getHeight() / 2;
+                        double dx = nearest.getX() - (r.getX() + r.getWidth() / 2);
+                        double dy = Math.abs(dx * r.getHeight() / r.getWidth());
+                        dy = r.getHeight() / 2 - dy;
+                        double py = yc;
+                        if (pos.getY() < yc) {
+                           py -= dy;
+                        } else {
+                           py += dy;
+                        }
+                        pos.setLocation(nearest.getX(), py);
+                     } else if (calcy) {
+                        double xc = r.getX() + r.getWidth() / 2;
+                        double px = xc;
+                        double dy = nearest.getY() - (r.getY() + r.getHeight() / 2);
+                        double dx = Math.abs(dy * r.getWidth() / r.getHeight());
+                        dx = r.getWidth() / 2 - dx;
+                        if (pos.getX() < xc) {
+                           px -= dx;
+                        } else {
+                           px += dx;
+                        }
+                        pos.setLocation(px, nearest.getY());
+
+                     }
+                  }
+
+               } else if (act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_EVENT_START || act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_EVENT_END) {
+
+               }
+            }
+         }
+      }
+      return pos;
+   }
+
+   protected boolean shouldInvokePortMagic(EdgeView edge) {
+      boolean isRouteOrEvent = false;
+      CellView vertex = getParentView();
+      if (vertex != null && vertex.getCell() instanceof DefaultGraphActivity) {
+         Activity act = ((Activity) ((DefaultGraphActivity) vertex.getCell()).getUserObject());
+         if (act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_ROUTE
+             || act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_EVENT_START || act.getActivityType() == XPDLConstants.ACTIVITY_TYPE_EVENT_END) {
+            isRouteOrEvent = true;
+         }
+      }
+      return !isRouteOrEvent && super.shouldInvokePortMagic(edge);
    }
 
 }
